# mplusfonts

./: CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
examples/: Cargo.toml  ansi.rs  tui-block.rs  tui-boxes.rs  tui-dots-2x4.rs  tui-rect-2x3.rs  tui-rect-2x4.rs
examples/apps/: Cargo.toml
examples/apps/common/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/apps/common/src/display/: writer.rs
examples/apps/common/src/usb_serial/: mod.rs  reader.rs  writer.rs
examples/apps/esp32c3/: Cargo.toml  README.md
examples/apps/esp32c3/.cargo/: config.toml
examples/apps/esp32s3/: Cargo.toml  README.md
examples/apps/esp32s3/.cargo/: config.toml
examples/apps/rp2040/: Cargo.toml  README.md  build.rs  memory.x
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/common/src/display/: rect.rs
examples/common/src/signals/: clock.rs
examples/esp32c3/: Cargo.toml  README.md
examples/esp32s3/: Cargo.toml  README.md
examples/rp2040/: Cargo.toml  README.md
examples/rp2040/.cargo/: config.toml
macros/: Cargo.toml
macros/src/mplus/: mod.rs  source.rs
macros/src/mplus/bitmap/: dict.rs  mod.rs  units.rs
macros/src/mplus/bitmap/from_outline/: glyph.rs  mod.rs
macros/src/mplus/bitmap/from_outline/glyph/: aligner.rs  offsets.rs  spacing.rs
macros/src/mplus/bitmap/from_svgpath/: glyph.rs  mod.rs
macros/src/mplus/bitmap/from_svgpath/glyph/: drawing.rs  metrics.rs
macros/src/mplus/bitmap/from_svgpath/glyph/drawing/: block.rs  chain.rs  cross.rs  lines.rs  shape.rs
macros/src/mplus/bitmap/from_svgpath/glyph/drawing/block/: complex.rs  inverse.rs  misc.rs  octant.rs  parts.rs  renders.rs  sextant.rs  shade.rs
macros/src/mplus/bitmap/from_svgpath/glyph/drawing/block/tall/: mod.rs  parts.rs
macros/src/mplus/bitmap/from_svgpath/glyph/drawing/block/wide/: mod.rs  parts.rs
macros/src/mplus/bitmap/from_svgpath/glyph/drawing/lines/: double.rs  single.rs
macros/src/mplus/bitmap/from_svgpath/glyph/drawing/lines/double/: parts.rs
macros/src/mplus/bitmap/from_svgpath/glyph/drawing/lines/single/: parts.rs  renders.rs  with_arc.rs  with_double.rs  with_heavy.rs  with_single.rs
macros/src/mplus/bitmap/from_svgpath/glyph/drawing/lines/single/with_heavy/: renders.rs
macros/src/mplus/bitmap/from_svgpath/glyph/drawing/lines/single/with_single/: renders.rs
macros/src/mplus/bitmap/from_svgpath/glyph/drawing/shape/: braille.rs
macros/tests/: bitmap_bless.rs  bitmap_tests.rs
macros/tests/bitmap/: render_glyphs_1_500_25_false_1_4_kern_dotless_i_j_liga.in  render_glyphs_1_500_25_false_1_4_kern_latin_1_sup_liga.in  render_glyphs_1_500_25_false_1_4_kern_space_tilde_liga.in  render_glyphs_2_500_25_false_1_4_kern_latin_ext_a_liga.in  render_glyphs_2_500_25_false_1_4_kern_latin_ext_b_liga.in  render_glyphs_2_500_25_true_1_4_ex_char_cell_diagonals.in  render_glyphs_code_100_500_25_false_1_4_box_components.in  render_glyphs_code_100_500_25_false_1_4_hiragana_kanji.in  render_glyphs_code_125_500_25_false_1_4_katakana_kanji.in
src/: builder.rs  color.rs  font.rs  lib.rs  rect.rs  style.rs
src/image/: mod.rs  raw.rs  sub.rs
src/image/mix/: with_colormap.rs
