[package]
name = "mplusfonts"
version = "0.3.3"
edition = "2024"
description = "Parametrized bitmap font family for embedded-graphics"
documentation = "https://docs.rs/mplusfonts"
readme = true
homepage = "https://crates.io/crates/mplusfonts"
repository = "https://github.com/iddey/mplusfonts"
license = "MIT OR Apache-2.0"
keywords = ["bitmap", "font", "kanji", "monospaced", "variable-width"]
categories = ["embedded", "graphics", "no-std", "no-std::no-alloc"]

[dependencies]
embedded-graphics = "0.8.2"
mplusfonts-macros = { version = "=0.3.3", path = "macros" }
defmt = { version = "1.0", optional = true }
epd-spectra = { version = "0.4.0", optional = true }

[dev-dependencies]
embedded-graphics-simulator = "0.8.0"
embedded-text = { version = "0.7.3", features = ["ansi"] }
chrono = { version = "0.4", features = ["clock"] }

[features]
# Allows the types in this crate and its dependencies to be formatted via defmt.
defmt = ["dep:defmt", "embedded-graphics/defmt"]

# Renders braille patterns with unpunched dots shown as very small squares.
alt-braille = ["mplusfonts-macros/alt-braille"]

# Renders kanji characters with their corresponding JIS X 0213:2004 glyphs.
alt-jis2004 = ["mplusfonts-macros/alt-jis2004"]

# Enables text rendering to a range of tricolor electrophoretic displays via epd-spectra.
epd-spectra = ["dep:epd-spectra"]

[workspace]
members = ["macros"]
exclude = ["examples"]
