[workspace]
resolver = "3"
members = ["common", "esp32s3", "rp2040"]

[workspace.package]
version = "0.1.0"
edition = "2024"
readme = true
repository = "https://github.com/iddey/mplusfonts"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.1", features = ["executor-thread"] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.9.0", features = ["time-driver"] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-usb = "0.5.1"
embedded-graphics = { version = "0.8.1", features = ["fixed"] }
esp-bootloader-esp-idf = "0.4.0"
esp-hal = { version = "1.0.0", features = ["unstable"] }
esp-hal-smartled = "0.17.0"
esp-rtos = { version = "0.2.0", features = ["embassy"] }
fixed = "1.29.0"
fixed-macro = "1.2.0"
heapless = "0.9.2"
mplusfonts.path = ".."
mplusfonts-examples-common.path = "common"
pio = "0.3.0"
portable-atomic = "1.11.1"
rgb = "0.8.52"
smart-leds-trait = "0.3.2"
ssd1306 = "0.10.0"
static_cell = "2.1.1"
