[package]
name = "mplusfonts-examples-common"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
embassy-sync.workspace = true
embassy-usb.workspace = true
embedded-graphics.workspace = true
heapless.workspace = true
mplusfonts.workspace = true
portable-atomic.workspace = true
static_cell.workspace = true
