[package]
name = "mplusfonts-examples-esp32s3"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mini-mono"
required-features = ["esp32s3"]

[dependencies]
embassy-executor.workspace = true
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embassy-usb.workspace = true
embedded-graphics.workspace = true
esp-bootloader-esp-idf.workspace = true
esp-hal.workspace = true
esp-hal-smartled.workspace = true
esp-rtos.workspace = true
heapless.workspace = true
mplusfonts.workspace = true
mplusfonts-examples-common.workspace = true
smart-leds-trait.workspace = true
ssd1306.workspace = true
static_cell.workspace = true

[features]
esp32s3 = [
    "esp-bootloader-esp-idf/esp32s3",
    "esp-hal/esp32s3",
    "esp-hal-smartled/esp32s3",
    "esp-rtos/esp32s3",
    "heapless/portable-atomic-critical-section",
]
