[package]
name = "mplusfonts-examples-rp2040"
version = "0.1.0"
edition = "2024"
readme = true
repository = "https://github.com/iddey/mplusfonts"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "mini-mono"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.8.0", features = ["critical-section-impl", "time-driver", "rp2040"] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-usb = "0.5.1"
embedded-graphics = { version = "0.8.1", features = ["fixed"] }
fixed = "1.29.0"
fixed-macro = "1.2.0"
heapless = { version = "0.9.1", features = ["portable-atomic-critical-section"] }
mplusfonts = { version = "0.3.1", path = "../.." }
mplusfonts-examples-common = { version = "0.1.0", path = "../common" }
pio = "0.3.0"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
rgb = "0.8.52"
smart-leds-trait = "0.3.2"
ssd1306 = "0.10.0"
static_cell = "2.1.1"

[build-dependencies]
fs_extra = "1.3.0"
