[package]
name = "mplusfonts-examples-common"
version = "0.1.0"
edition = "2024"
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
embassy-sync.workspace = true
embassy-time.workspace = true
embassy-usb.workspace = true
embedded-graphics.workspace = true
heapless.workspace = true
mplusfonts.workspace = true
portable-atomic.workspace = true
static_cell.workspace = true
