[package]
name = "mplusfonts-examples-esp32s3"
version = "0.1.0"
edition = "2024"
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
embassy-executor.workspace = true
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embassy-usb.workspace = true
embedded-graphics.workspace = true
esp-bootloader-esp-idf = { workspace = true, features = ["esp32s3"] }
esp-hal = { workspace = true, features = ["esp32s3"] }
esp-hal-smartled = { workspace = true, features = ["esp32s3"] }
esp-rtos = { workspace = true, features = ["esp32s3"] }
heapless = { workspace = true, features = ["portable-atomic-critical-section"] }
mplusfonts.workspace = true
mplusfonts-examples-common.workspace = true
smart-leds-trait.workspace = true
ssd1306.workspace = true
static_cell.workspace = true
