[package]
name = "mplusfonts-examples-rp2040"
version = "0.1.0"
edition = "2024"
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embassy-embedded-hal.workspace = true
embassy-executor = { workspace = true, features = ["arch-cortex-m"] }
embassy-futures.workspace = true
embassy-rp = { workspace = true, features = ["critical-section-impl", "rp2040"] }
embassy-sync.workspace = true
embassy-time.workspace = true
embassy-usb.workspace = true
embedded-graphics.workspace = true
fixed.workspace = true
fixed-macro.workspace = true
heapless = { workspace = true, features = ["portable-atomic-critical-section"] }
mplusfonts.workspace = true
mplusfonts-examples-common.workspace = true
panic-halt.workspace = true
pio.workspace = true
rgb.workspace = true
ssd1306.workspace = true
static_cell.workspace = true

[build-dependencies]
fs_extra = "1.3.0"
