[package]
name = "mplusfonts-examples-rp2040"
version = "0.1.0"
edition = "2024"
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mini-mono"
required-features = ["rp2040"]

[[bin]]
name = "round-tft"
required-features = ["rp2040"]

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embassy-embedded-hal.workspace = true
embassy-executor.workspace = true
embassy-futures.workspace = true
embassy-rp.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embassy-usb.workspace = true
embedded-graphics.workspace = true
fixed.workspace = true
fixed-macro.workspace = true
heapless.workspace = true
mipidsi.workspace = true
mplusfonts.workspace = true
mplusfonts-examples-common.workspace = true
panic-halt.workspace = true
pio.workspace = true
rgb.workspace = true
ssd1306.workspace = true
static_cell.workspace = true

[build-dependencies]
fs_extra = "1.3.0"

[features]
rp2040 = [
    "embassy-executor/arch-cortex-m",
    "embassy-rp/critical-section-impl",
    "embassy-rp/rp2040",
    "heapless/portable-atomic-critical-section",
]
